deployments/kubernetes/ingress/portfolio-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: portfolio
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`portfolio.glanze.site`)
      kind: Rule
      services:
        - name: portfolio  # Ganti dengan 'dev-portfolio' jika menggunakan environment development
          port: 80
  tls:
    certResolver: letsencrypt
